alignment fix

--- a/css/about_us.css
+++ b/css/about_us.css
@@ -283,6 +283,11 @@ body {
   .our-story {
     padding: 0 1.5rem;
   }
+  .about-section .color-block {
+    height: 10vh;
+    padding-top: 50px;
+    padding-bottom: 15px;
+  }
   .story-left,
   .story-right {
     width: 100%;
@@ -311,4 +316,11 @@ body {
     width: 100%;
     height: 250px;
   }
+}
+@media (max-width: 25rem){
+.about-section .color-block {
+  height: 10vh;
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+}
 }
