--- a/css/team.css
+++ b/css/team.css
@@ -252,8 +252,8 @@ h1{
 
   .team-head {
     font-size: 1rem;
-    padding-top: 4rem;
-    padding-bottom: 1rem;
+    padding-top: 5rem;
+    padding-bottom: 1.5rem;
     text-align: center;
     height: 10vh;
   }
